[project]
name = "drl-inventory-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "gymnasium>=1.1.1",
  "mypy>=1.15",
  "pre-commit>=4.2",
  "stable-baselines3>=2.6",
  "tensorboard>=2.19",
]
